| Bug #29073 | ndb_mgm doesn't preserve history | ||
|---|---|---|---|
| Submitted: | 13 Jun 2007 15:30 | Modified: | 19 Jun 2007 14:21 |
| Reporter: | Stewart Smith | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Any |
| Assigned to: | Bugs System | Target Version: | |
[13 Jun 2007 15:30]
Stewart Smith
[13 Jun 2007 15:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/28666 ChangeSet@1.2539, 2007-06-13 23:34:09+10:00, stewart@flamingspork.com +1 -0 [PATCH] BUG#29073 Store history for ndb_mgm Index: ndb-work/storage/ndb/src/mgmclient/main.cpp ===================================================================
[13 Jun 2007 15:37]
Stewart Smith
pushed to 5.1-ndb
[18 Jun 2007 9:48]
Bugs System
Pushed into 5.1.20-beta
[19 Jun 2007 14:21]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented feature addition in 5.1.20 changelog.
