[PATCH] BUG#29073 Store history for ndb_mgm

Index: ndb-work/storage/ndb/src/mgmclient/main.cpp
===================================================================